[gd_scene load_steps=13 format=2]

[ext_resource path="res://recursos/Enemies/wingMan1.png" type="Texture" id=1]
[ext_resource path="res://juego/enemigos/Volon.gd" type="Script" id=2]
[ext_resource path="res://recursos/Enemies/wingMan4.png" type="Texture" id=3]
[ext_resource path="res://recursos/Enemies/wingMan5.png" type="Texture" id=4]
[ext_resource path="res://recursos/Enemies/wingMan2.png" type="Texture" id=5]
[ext_resource path="res://recursos/Enemies/wingMan3.png" type="Texture" id=6]
[ext_resource path="res://recursos/SFX/volon_muerte.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "volar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.4712, 19.1322 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.0669, 8.22858 )

[sub_resource type="Animation" id=4]
resource_name = "morir"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Morir")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 1.58613,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "volar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 4, 3, 2, 1, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DetectorJugador:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.561234, 19.0819 ), Vector2( -0.561, -88.082 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DectorPisoton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -101 ) ]
}

[node name="Volon" type="Area2D"]
z_index = 35
z_as_relative = false
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "volar"

[node name="DetectorJugador" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.545098, 0.0588235, 1 )
position = Vector2( 0.145858, 16.9606 )
shape = SubResource( 2 )

[node name="DectorPisoton" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Colisionador" type="CollisionShape2D" parent="DectorPisoton"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1.06067, -14.0955 )
shape = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "volar"
anims/morir = SubResource( 4 )
anims/volar = SubResource( 5 )

[node name="Morir" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -4.16
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DectorPisoton" to="." method="_on_DectorPisoton_body_entered"]
